# objecttracker-cpp

./: .gitignore  CMakeLists.txt  README.md  colored_object.cpp  colored_object.hpp  coloredobject.cpp  coloredobject.hpp  window.cpp
